--- a/Models/Model_2_MLR_baseline.ipynb
+++ b/Models/Model_2_MLR_baseline.ipynb
@@ -1537,6 +1537,13 @@
     "plt.title('3D Visualization of 2 predictors: MLR')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Any discrepencies when going through checklist of quality of the model, then you may need a different approach."
+   ]
   }
  ],
  "metadata": {
