FD using team stats

--- a/Analysis/FD_team_stats.ipynb
+++ b/Analysis/FD_team_stats.ipynb
@@ -1370,6 +1370,13 @@
    "source": [
     "What this translates as in terms of selection is: An attacker who plays home (H)) to these clubs with have a difficulty of 4 (Arsenal, Tottenham, Chelsea, Fulham, Everton)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NOTE small sample sizes home and away and there may be a regression towards the mean yet to happen. A way around this in the short term may be to using 'Per 90 data, which takes the average performance both home and away from the start of the season. "
+   ]
   }
  ],
  "metadata": {
