Fixture_difficulty_analysis

--- a/Analysis/FD_team_stats.ipynb
+++ b/Analysis/FD_team_stats.ipynb
@@ -1375,7 +1375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## NOTE small sample sizes home and away and there may be a regression towards the mean yet to happen. A way around this in the short term may be to using 'Per 90 data, which takes the average performance both home and away from the start of the season. "
+    "#### NOTE: small sample sizes home and away and there may be a regression towards the mean yet to happen. A way around this in the short term may be to using 'Per 90 data, which takes the average performance both home and away from the start of the season. "
    ]
   }
  ],
