Ahead GW13 selection

--- a/Models/Model_3_F_FD_upgrade.ipynb
+++ b/Models/Model_3_F_FD_upgrade.ipynb
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +594,7 @@
     "# Define constants\n",
     "Gameweek = 12\n",
     "BUDGET = 800 # Choose your budget (1000 = £100m)\n",
-    "WEEKS = 4 # Choose how many weeks you want to prepare for between 1 and 5\n",
+    "WEEKS = 1 # Choose how many weeks you want to prepare for between 1 and 5\n",
     "GK = 1 # Goalkeepers required (Choose between 0 and 2)\n",
     "DEF = 3 # Defenders required (Choose between 0 and 5)\n",
     "MID = 4 # Midfielders required (Choose between 0 and 5)\n",
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -614,19 +614,19 @@
      "output_type": "stream",
      "text": [
       "           Name       Team Position  FD_Index  Price\n",
-      "0          Saka    Arsenal      MID     0.436    101\n",
-      "1       M.Salah  Liverpool      MID     0.632    130\n",
-      "2   B.Fernandes    Man Utd      MID     0.604     84\n",
-      "3   Wan-Bissaka   West Ham      DEF     0.564     44\n",
-      "4          Isak  Newcastle      FWD     0.564     85\n",
-      "5   Pedro Porro      Spurs      DEF     0.452     55\n",
-      "6       Emerson   West Ham      DEF     0.410     44\n",
-      "7     Fabianski   West Ham       GK     0.436     41\n",
-      "8         Cunha     Wolves      FWD     1.030     68\n",
-      "9       J.Gomes     Wolves      MID     0.758     49\n",
-      "10   João Pedro   Brighton      FWD     0.767     55\n",
-      "Total Team Cost: 756\n",
-      "Total Team Index 6.653\n"
+      "0          Saka    Arsenal      MID     1.889    101\n",
+      "1       M.Salah  Liverpool      MID     2.400    130\n",
+      "2   B.Fernandes    Man Utd      MID     3.222     84\n",
+      "3         Onana    Man Utd       GK     2.334     51\n",
+      "4   Wan-Bissaka   West Ham      DEF     2.444     44\n",
+      "5         Cunha     Wolves      FWD     5.666     68\n",
+      "6       J.Gomes     Wolves      MID     4.166     49\n",
+      "7          Toti     Wolves      DEF     2.000     43\n",
+      "8      Mazraoui    Man Utd      DEF     2.000     46\n",
+      "9         Wissa  Brentford      FWD     2.834     61\n",
+      "10   João Pedro   Brighton      FWD     3.834     55\n",
+      "Total Team Cost: 732\n",
+      "Total Team Index 32.789\n"
      ]
     }
    ],
