--- a/Models/Model_2.ipynb
+++ b/Models/Model_2.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model 2\n",
+    "\n",
+    "### Improved form and fixture difficulty calculation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
