--- a/Models/Model_2.ipynb
+++ b/Models/Model_2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,300 +141,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# filter on current gameweek\n",
     "today = data['Gameweek'].isin([gameweek])\n",
     "data = data[today]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Player ID</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Last_Name</th>\n",
-       "      <th>Team</th>\n",
-       "      <th>Position</th>\n",
-       "      <th>Cost_Today</th>\n",
-       "      <th>GW Points</th>\n",
-       "      <th>Form</th>\n",
-       "      <th>Gameweek</th>\n",
-       "      <th>GW15</th>\n",
-       "      <th>GW16</th>\n",
-       "      <th>GW17</th>\n",
-       "      <th>GW18</th>\n",
-       "      <th>GW19</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>7012</th>\n",
-       "      <td>501</td>\n",
-       "      <td>Oliver</td>\n",
-       "      <td>Skipp</td>\n",
-       "      <td>Leicester</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>48</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>14</td>\n",
-       "      <td>BHA (H)</td>\n",
-       "      <td>NEW (A)</td>\n",
-       "      <td>WOL (H)</td>\n",
-       "      <td>LIV (A)</td>\n",
-       "      <td>MCI (H)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7026</th>\n",
-       "      <td>502</td>\n",
-       "      <td>Manor</td>\n",
-       "      <td>Solomon</td>\n",
-       "      <td>Spurs</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>54</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>14</td>\n",
-       "      <td>CHE (H)</td>\n",
-       "      <td>SOU (A)</td>\n",
-       "      <td>LIV (H)</td>\n",
-       "      <td>NFO (A)</td>\n",
-       "      <td>WOL (H)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7040</th>\n",
-       "      <td>503</td>\n",
-       "      <td>Son</td>\n",
-       "      <td>Son</td>\n",
-       "      <td>Spurs</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>99</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.75</td>\n",
-       "      <td>14</td>\n",
-       "      <td>CHE (H)</td>\n",
-       "      <td>SOU (A)</td>\n",
-       "      <td>LIV (H)</td>\n",
-       "      <td>NFO (A)</td>\n",
-       "      <td>WOL (H)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7054</th>\n",
-       "      <td>504</td>\n",
-       "      <td>Djed</td>\n",
-       "      <td>Spence</td>\n",
-       "      <td>Spurs</td>\n",
-       "      <td>DEF</td>\n",
-       "      <td>44</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>14</td>\n",
-       "      <td>CHE (H)</td>\n",
-       "      <td>SOU (A)</td>\n",
-       "      <td>LIV (H)</td>\n",
-       "      <td>NFO (A)</td>\n",
-       "      <td>WOL (H)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7068</th>\n",
-       "      <td>505</td>\n",
-       "      <td>Destiny</td>\n",
-       "      <td>Udogie</td>\n",
-       "      <td>Spurs</td>\n",
-       "      <td>DEF</td>\n",
-       "      <td>49</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.75</td>\n",
-       "      <td>14</td>\n",
-       "      <td>CHE (H)</td>\n",
-       "      <td>SOU (A)</td>\n",
-       "      <td>LIV (H)</td>\n",
-       "      <td>NFO (A)</td>\n",
-       "      <td>WOL (H)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7922</th>\n",
-       "      <td>566</td>\n",
-       "      <td>Jørgen</td>\n",
-       "      <td>Strand Larsen</td>\n",
-       "      <td>Wolves</td>\n",
-       "      <td>FWD</td>\n",
-       "      <td>56</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5.00</td>\n",
-       "      <td>14</td>\n",
-       "      <td>WHU (A)</td>\n",
-       "      <td>IPS (H)</td>\n",
-       "      <td>LEI (A)</td>\n",
-       "      <td>MUN (H)</td>\n",
-       "      <td>TOT (A)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7936</th>\n",
-       "      <td>567</td>\n",
-       "      <td>Toti António</td>\n",
-       "      <td>Toti</td>\n",
-       "      <td>Wolves</td>\n",
-       "      <td>DEF</td>\n",
-       "      <td>43</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>14</td>\n",
-       "      <td>WHU (A)</td>\n",
-       "      <td>IPS (H)</td>\n",
-       "      <td>LEI (A)</td>\n",
-       "      <td>MUN (H)</td>\n",
-       "      <td>TOT (A)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7950</th>\n",
-       "      <td>568</td>\n",
-       "      <td>Arijanet</td>\n",
-       "      <td>Muric</td>\n",
-       "      <td>Ipswich</td>\n",
-       "      <td>GK</td>\n",
-       "      <td>44</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.75</td>\n",
-       "      <td>14</td>\n",
-       "      <td>BOU (H)</td>\n",
-       "      <td>WOL (A)</td>\n",
-       "      <td>NEW (H)</td>\n",
-       "      <td>ARS (A)</td>\n",
-       "      <td>CHE (H)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7964</th>\n",
-       "      <td>569</td>\n",
-       "      <td>Jaden</td>\n",
-       "      <td>Jaden</td>\n",
-       "      <td>Aston Villa</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>53</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>14</td>\n",
-       "      <td>SOU (H)</td>\n",
-       "      <td>NFO (A)</td>\n",
-       "      <td>MCI (H)</td>\n",
-       "      <td>NEW (A)</td>\n",
-       "      <td>BHA (H)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7978</th>\n",
-       "      <td>570</td>\n",
-       "      <td>Abdul</td>\n",
-       "      <td>A.Fatawu</td>\n",
-       "      <td>Leicester</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>52</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>14</td>\n",
-       "      <td>BHA (H)</td>\n",
-       "      <td>NEW (A)</td>\n",
-       "      <td>WOL (H)</td>\n",
-       "      <td>LIV (A)</td>\n",
-       "      <td>MCI (H)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>70 rows × 14 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Player ID          Name      Last_Name         Team Position  \\\n",
-       "7012        501        Oliver          Skipp    Leicester      MID   \n",
-       "7026        502         Manor        Solomon        Spurs      MID   \n",
-       "7040        503           Son            Son        Spurs      MID   \n",
-       "7054        504          Djed         Spence        Spurs      DEF   \n",
-       "7068        505       Destiny         Udogie        Spurs      DEF   \n",
-       "...         ...           ...            ...          ...      ...   \n",
-       "7922        566        Jørgen  Strand Larsen       Wolves      FWD   \n",
-       "7936        567  Toti António           Toti       Wolves      DEF   \n",
-       "7950        568      Arijanet          Muric      Ipswich       GK   \n",
-       "7964        569         Jaden          Jaden  Aston Villa      MID   \n",
-       "7978        570         Abdul       A.Fatawu    Leicester      MID   \n",
-       "\n",
-       "      Cost_Today  GW Points  Form  Gameweek     GW15     GW16     GW17  \\\n",
-       "7012          48          0  0.50        14  BHA (H)  NEW (A)  WOL (H)   \n",
-       "7026          54          0  0.00        14  CHE (H)  SOU (A)  LIV (H)   \n",
-       "7040          99          1  2.75        14  CHE (H)  SOU (A)  LIV (H)   \n",
-       "7054          44          0  0.25        14  CHE (H)  SOU (A)  LIV (H)   \n",
-       "7068          49          2  2.75        14  CHE (H)  SOU (A)  LIV (H)   \n",
-       "...          ...        ...   ...       ...      ...      ...      ...   \n",
-       "7922          56          2  5.00        14  WHU (A)  IPS (H)  LEI (A)   \n",
-       "7936          43          1  3.00        14  WHU (A)  IPS (H)  LEI (A)   \n",
-       "7950          44          2  2.75        14  BOU (H)  WOL (A)  NEW (H)   \n",
-       "7964          53          1  1.00        14  SOU (H)  NFO (A)  MCI (H)   \n",
-       "7978          52          0  0.50        14  BHA (H)  NEW (A)  WOL (H)   \n",
-       "\n",
-       "         GW18     GW19  \n",
-       "7012  LIV (A)  MCI (H)  \n",
-       "7026  NFO (A)  WOL (H)  \n",
-       "7040  NFO (A)  WOL (H)  \n",
-       "7054  NFO (A)  WOL (H)  \n",
-       "7068  NFO (A)  WOL (H)  \n",
-       "...       ...      ...  \n",
-       "7922  MUN (H)  TOT (A)  \n",
-       "7936  MUN (H)  TOT (A)  \n",
-       "7950  ARS (A)  CHE (H)  \n",
-       "7964  NEW (A)  BHA (H)  \n",
-       "7978  LIV (A)  MCI (H)  \n",
-       "\n",
-       "[70 rows x 14 columns]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.iloc[500:570]"
    ]
   },
   {
@@ -446,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,6 +184,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export to csv for website\n",
+    "data.to_csv(r'C:\\Users\\thoma\\Code\\Projects\\Fantasy-Premier-League\\Data\\Players\\Accumulated\\Current_Form.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -479,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,12 +218,12 @@
     "# a team given the constraints of budget, position and team limit. \n",
     "\n",
     "# Define constants\n",
-    "BUDGET = 800 # Choose your budget (1000 = £100m)\n",
+    "BUDGET = 120 # Choose your budget (1000 = £100m)\n",
     "WEEKS = 3 # Choose how many weeks you want to prepare for between 1 and 5\n",
-    "GK = 1 # Goalkeepers required (Choose between 0 and 2)\n",
-    "DEF = 3 # Defenders required (Choose between 0 and 5)\n",
-    "MID = 4 # Midfielders required (Choose between 0 and 5)\n",
-    "FWD = 3\n",
+    "GK = 0 # Goalkeepers required (Choose between 0 and 2)\n",
+    "DEF = 1 # Defenders required (Choose between 0 and 5)\n",
+    "MID = 1 # Midfielders required (Choose between 0 and 5)\n",
+    "FWD = 0\n",
     " #  Forwards required (Choose between 0 and 3)\n",
     "\n",
     "# Use dataset\n",
@@ -509,27 +232,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Name         Team Position  FD_Index  Price\n",
-      "0          Saka      Arsenal      MID    0.9000    104\n",
-      "1        Saliba      Arsenal      DEF    0.8929     60\n",
-      "2      Kelleher    Liverpool       GK    0.5500     45\n",
-      "3       M.Salah    Liverpool      MID    1.0357    132\n",
-      "4   Wan-Bissaka     West Ham      DEF    0.8750     45\n",
-      "5          Isak    Newcastle      FWD    1.0417     85\n",
-      "6      J.Timber      Arsenal      DEF    0.8214     55\n",
-      "7         Cunha       Wolves      FWD    1.3333     71\n",
-      "8      Kluivert  Bournemouth      MID    1.0000     54\n",
-      "9    João Pedro     Brighton      FWD    1.2500     58\n",
-      "10       Mitoma     Brighton      MID    0.9583     65\n",
-      "Total Team Cost: 774\n",
-      "Total Team Index 10.6583\n"
+      "       Name         Team Position  FD_Index  Price\n",
+      "0    Saliba      Arsenal      DEF    0.8929     60\n",
+      "1  Kluivert  Bournemouth      MID    1.0000     54\n",
+      "Total Team Cost: 114\n",
+      "Total Team Index 1.8929\n"
      ]
     }
    ],
@@ -617,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
