--- a/Models/.ipynb_files/Model_2.ipynb
+++ b/Models/.ipynb_files/Model_2.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "## Model 2\n",
     "\n",
-    "### Improved form and fixture difficulty calculation."
+    "Improved form and fixture difficulty calculation.\n",
+    "\n",
+    "In this model, I created two new features for form and fixture difficulty. Form is a rolling average across 4 gameweeks and Fixture Difficulty is distinct for attacking/defending players and is a combination of teamxG, xGA and FPL points (see analysis folder and article on medium."
    ]
   },
   {
@@ -31,7 +33,7 @@
    "outputs": [],
    "source": [
     "# Enter current gameweek \n",
-    "gameweek = 14"
+    "gameweek = 16"
    ]
   },
   {
@@ -159,12 +161,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import improve fixture difficulty \n",
-    "difficulty = pd.read_csv(r'C:\\Users\\thoma\\Code\\Projects\\Fantasy-Premier-League\\Data\\Fixtures\\Difficulty_ratings\\Model\\FD_combined\\Current_FD.csv', index_col=0)\n",
+    "difficulty = pd.read_csv(r'C:\\Users\\thoma\\Code\\Projects\\Fantasy-Premier-League\\Data\\Fixtures\\Difficulty_ratings\\FD_Improved\\Current_FD_Improved.csv', index_col=0)\n",
     "\n",
     "# Create a mapping dictionary from fixture difficulty\n",
     "mapping = difficulty.set_index(['Opponent', 'Position'])['FD_combined'].to_dict()\n",
@@ -190,7 +192,7 @@
    "outputs": [],
    "source": [
     "# Export to csv for website\n",
-    "data.to_csv(r'C:\\Users\\thoma\\Code\\Projects\\Fantasy-Premier-League\\Data\\Players\\Accumulated\\Current_Form.csv')"
+    "#data.to_csv(r'C:\\Users\\thoma\\Code\\Projects\\Fantasy-Premier-League\\WIP\\Website\\.csv_files\\Current_Form.csv')"
    ]
   },
   {
@@ -202,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,12 +220,12 @@
     "# a team given the constraints of budget, position and team limit. \n",
     "\n",
     "# Define constants\n",
-    "BUDGET = 120 # Choose your budget (1000 = £100m)\n",
-    "WEEKS = 3 # Choose how many weeks you want to prepare for between 1 and 5\n",
-    "GK = 0 # Goalkeepers required (Choose between 0 and 2)\n",
-    "DEF = 1 # Defenders required (Choose between 0 and 5)\n",
-    "MID = 1 # Midfielders required (Choose between 0 and 5)\n",
-    "FWD = 0\n",
+    "BUDGET = 800 # Choose your budget (1000 = £100m)\n",
+    "WEEKS = 1 # Choose how many weeks you want to prepare for between 1 and 5\n",
+    "GK = 1 # Goalkeepers required (Choose between 0 and 2)\n",
+    "DEF = 3 # Defenders required (Choose between 0 and 5)\n",
+    "MID = 4 # Midfielders required (Choose between 0 and 5)\n",
+    "FWD = 3\n",
     " #  Forwards required (Choose between 0 and 3)\n",
     "\n",
     "# Use dataset\n",
@@ -232,18 +234,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       Name         Team Position  FD_Index  Price\n",
-      "0    Saliba      Arsenal      DEF    0.8929     60\n",
-      "1  Kluivert  Bournemouth      MID    1.0000     54\n",
-      "Total Team Cost: 114\n",
-      "Total Team Index 1.8929\n"
+      "             Name               Team Position  FD_Index  Price\n",
+      "0            Raya            Arsenal       GK    2.0000     56\n",
+      "1          Saliba            Arsenal      DEF    3.8750     62\n",
+      "2           Iwobi             Fulham      MID    3.0000     57\n",
+      "3         M.Salah          Liverpool      MID    3.1667    134\n",
+      "4            Isak          Newcastle      FWD    3.8750     86\n",
+      "5     Gibbs-White  Nottingham Forest      MID    3.0000     63\n",
+      "6            Wood  Nottingham Forest      FWD    2.6250     66\n",
+      "7        J.Timber            Arsenal      DEF    2.8750     57\n",
+      "8   Strand Larsen             Wolves      FWD    2.1250     57\n",
+      "9          Schade          Brentford      MID    3.0833     51\n",
+      "10      Cucurella            Chelsea      DEF    2.7500     51\n",
+      "Total Team Cost: 740\n",
+      "Total Team Index 32.375\n"
      ]
     }
    ],
@@ -331,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
