--- a/Models/Notebooks/Model_1.ipynb
+++ b/Models/Notebooks/Model_1.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Gameweek = 14\n",
+    "Gameweek = 16\n",
     "BUDGET = 800 \n",
     "WEEKS = 1 \n",
     "GK = 1 \n",
@@ -134,29 +134,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Name         Team Position  FD_Index  Price\n",
-      "0          Saka      Arsenal      MID     1.800    104\n",
-      "1        Saliba      Arsenal      DEF     1.240     60\n",
-      "2      Kelleher    Liverpool       GK     1.100     46\n",
-      "3       M.Salah    Liverpool      MID     2.900    132\n",
-      "4      J.Timber      Arsenal      DEF     1.160     56\n",
-      "5   Wan-Bissaka     West Ham      DEF     1.400     45\n",
-      "6         Cunha       Wolves      FWD     2.000     71\n",
-      "7      Kluivert  Bournemouth      MID     2.000     54\n",
-      "8     Evanilson  Bournemouth      FWD     1.500     60\n",
-      "9    João Pedro     Brighton      FWD     1.875     58\n",
-      "10       Mitoma     Brighton      MID     1.450     65\n",
+      "           Name       Team Position  FD_Index  Price\n",
+      "0          Enzo    Chelsea      MID    1.6000     51\n",
+      "1        Palmer    Chelsea      MID    1.7600    112\n",
+      "2        Saliba    Arsenal      DEF    1.5200     63\n",
+      "3       M.Salah  Liverpool      MID    2.0333    134\n",
+      "4          Amad    Man Utd      MID    1.9000     52\n",
+      "5          Isak  Newcastle      FWD    1.3200     87\n",
+      "6      J.Timber    Arsenal      DEF    1.1600     57\n",
+      "7   Wan-Bissaka   West Ham      DEF    1.4500     46\n",
+      "8         Cunha     Wolves      FWD    1.2000     71\n",
+      "9    João Pedro   Brighton      FWD    1.1500     59\n",
+      "10         Raya    Arsenal       GK    0.8800     56\n",
       "\n",
       "\n",
-      "Total Team Cost: 751\n",
-      "Total Team Index 18.425\n"
+      "Total Team Cost: 788\n",
+      "Total Team Index 15.9733\n"
      ]
     }
    ],
