--- a/Models/Notebooks/Model_2.1.ipynb
+++ b/Models/Notebooks/Model_2.1.ipynb
@@ -6,10 +6,11 @@
    "source": [
     "## Model 2.1\n",
     "\n",
-    "Features used is Fixture Difficulty Difference and attacking player xG and defensive team xGA.\n",
+    "Features used is Fixture Difficulty Difference, Form and player xG and team xGA.\n",
+    "\n",
     "This model was built from 'Feature analysis', 'Feature engineering' and 'Model 3 - Linear modelling'.\n",
     "\n",
-    "The analysis showed that attacking players are getting points for goals and defending players are getting points for clean sheets. Feature engineering \"fixture difficulty difference and playerxG\" was the most correlated with goals, and \"fixture difficulty difference and teamxGA\" was the most correlated with clean sheets. "
+    "The analysis showed that attacking players are getting points for goals and defending players are getting points for clean sheets. Feature engineering \"fixture difficulty difference, Form and playerxG\" was the most correlated with goals, and \"fixture difficulty difference and teamxGA\" was the most correlated with clean sheets. "
    ]
   },
   {
@@ -38,7 +39,7 @@
    "outputs": [],
    "source": [
     "# Current gameweek \n",
-    "gameweek = 13"
+    "gameweek = 14"
    ]
   },
   {
@@ -302,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,6 +396,12 @@
     "player_data[\"Form_TeamxG_against\"] = (\n",
     "    player_data.groupby(\"Player ID\")[\"TeamxG_against\"]\n",
     "    .transform(lambda x: x.rolling(window=number_of_games).mean().round(3))\n",
+    ")\n",
+    "\n",
+    "# Apply rolling mean for Form\n",
+    "player_data['Form'] = (\n",
+    "    player_data.groupby(\"Player ID\")[\"GW Points\"]\n",
+    "    .transform(lambda x: x.rolling(window=number_of_games).mean().round(3))\n",
     ")"
    ]
   },
@@ -407,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,6 +422,7 @@
     "scaler = MinMaxScaler(feature_range=(2, 5))\n",
     "\n",
     "# Reshape the data to a 2D array and apply the scaler\n",
+    "\n",
     "for i in range(1,6):\n",
     "    player_data[f'FD_Difference_norm{i}'] = scaler.fit_transform(player_data[f'F_Difference{i}'].values.reshape(-1, 1))\n",
     "\n",
@@ -422,7 +430,10 @@
     "player_data[f'Form_player_xG_norm'] = scaler.fit_transform(player_data['Form_player_xG'].values.reshape(-1, 1))\n",
     "\n",
     "# Team xG_against_form\n",
-    "player_data[f'Form_TeamxG_against_norm'] = scaler.fit_transform(player_data['Form_TeamxG_against'].values.reshape(-1, 1))"
+    "player_data[f'Form_TeamxG_against_norm'] = scaler.fit_transform(player_data['Form_TeamxG_against'].values.reshape(-1, 1))\n",
+    "\n",
+    "# Player form normalise\n",
+    "player_data[f'Form_norm'] = scaler.fit_transform(player_data['Form'].values.reshape(-1, 1))"
    ]
   },
   {
@@ -434,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +455,7 @@
     "        lambda row: (\n",
     "            row[f'FD_Difference_norm{i}'] / row['Form_TeamxG_against_norm']\n",
     "            if row['Position'] in ['GK', 'DEF']\n",
-    "            else row[f'FD_Difference_norm{i}'] * row['Form_player_xG_norm']\n",
+    "            else row[f'FD_Difference_norm{i}'] * row['Form_norm'] * row['Form_player_xG_norm']\n",
     "        ),\n",
     "        axis=1\n",
     "    )\n",
@@ -456,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,27 +523,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         Name         Team Position   FD_Index  Price\n",
-      "0     M.Salah    Liverpool      MID  17.834320    131\n",
-      "1     Haaland     Man City      FWD  17.157914    151\n",
-      "2      Rogers  Aston Villa      MID  11.795858     54\n",
-      "3     Watkins  Aston Villa      FWD  15.240754     90\n",
-      "4        Raya      Arsenal       GK   2.112845     55\n",
-      "5        Enzo      Chelsea      MID  12.995562     48\n",
-      "6   N.Jackson      Chelsea      FWD  12.607249     80\n",
-      "7      J.Ayew    Leicester      MID  11.665680     52\n",
-      "8   Mykolenko      Everton      DEF   1.763527     43\n",
-      "9   Tarkowski      Everton      DEF   1.763527     48\n",
-      "10      Young      Everton      DEF   1.763527     45\n",
-      "Total Team Cost: 797\n",
-      "Total Team Index 106.70076357848637\n"
+      "            Name         Team Position   FD_Index  Price\n",
+      "0       J.Timber      Arsenal      DEF   1.813333     55\n",
+      "1        M.Salah    Liverpool      MID  79.461908    132\n",
+      "2      Zinchenko      Arsenal      DEF   1.813333     48\n",
+      "3      Evanilson  Bournemouth      FWD  46.403071     60\n",
+      "4         Kiwior      Arsenal      DEF   1.813333     48\n",
+      "5        Watkins  Aston Villa      FWD  57.226331     90\n",
+      "6       Kluivert  Bournemouth      MID  54.469710     54\n",
+      "7         Schade    Brentford      MID  49.375106     51\n",
+      "8          Wissa    Brentford      FWD  50.097210     62\n",
+      "9   Arrizabalaga  Bournemouth       GK   1.974194     45\n",
+      "10        Palmer      Chelsea      MID  58.245139    110\n",
+      "Total Team Cost: 755\n",
+      "Total Team Index 402.69266987974805\n"
      ]
     }
    ],
