--- a/Models/Notebooks/Model_2.ipynb
+++ b/Models/Notebooks/Model_2.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,12 +187,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export to csv for website\n",
-    "#data.to_csv(r'C:\\Users\\thoma\\Code\\Projects\\Fantasy-Premier-League\\WIP\\Website\\.csv_files\\Current_Form.csv')"
+    "data.to_csv(r'C:\\Users\\thoma\\Code\\Projects\\Fantasy-Premier-League\\WIP\\Website\\.csv_files\\Current_Form.csv')"
    ]
   },
   {
