--- a/Data/Fixtures/Difficulty_ratings/FD_Improved/FD_Improved.ipynb
+++ b/Data/Fixtures/Difficulty_ratings/FD_Improved/FD_Improved.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fixture Difficulty: Improved "
+    "# Fixture Difficulty: Improved\n",
+    "\n",
+    "Running this file produces the most up to date fixture difficulty ratings using a combination of GW points and team xG for and against."
    ]
   },
   {
