--- a/Data/Fixtures/Difficulty_ratings/FD_Improved/FD_Improved.ipynb
+++ b/Data/Fixtures/Difficulty_ratings/FD_Improved/FD_Improved.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Fixture Difficulty: Improved\n",
     "\n",
-    "Running this file produces the most up to date fixture difficulty ratings using a combination of GW points and team xG for and against."
+    "Running this file produces the most up to date fixture difficulty ratings using a combination of GW points and team xG for and against.\n",
+    "\n",
+    "Change the files at source to choose a later gameweek window e.g. gw 10 to 16, rather than current 1 to 16. "
    ]
   },
   {
