--- a/Analysis/Improved_FD_points.ipynb
+++ b/Analysis/Improved_FD_points.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,10 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Starting gameweek\n",
+    "week = 6\n",
+    "\n",
     "# Current gameweek \n",
     "gameweek = 16"
    ]
@@ -40,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +51,7 @@
     "all_player_sep = []\n",
     "\n",
     "# Loop through each gameweek\n",
-    "for i in range(1, gameweek + 1):  # Adjusting the range to start from 1 to gameweek\n",
+    "for i in range(week, gameweek + 1):  # Adjusting the range to start from 1 to gameweek\n",
     "    # Read the CSV for the current gameweek\n",
     "    x = pd.read_csv(rf'C:\\Users\\thoma\\Code\\Projects\\Fantasy-Premier-League\\Data\\Players\\Seperate_GW\\GW_{i}.csv')\n",
     "    \n",
@@ -74,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -125,122 +128,122 @@
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>6</td>\n",
-       "      <td>252</td>\n",
+       "      <td>164</td>\n",
        "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
        "      <td>4</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>15</td>\n",
-       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
        "      <td>6</td>\n",
-       "      <td>8</td>\n",
+       "      <td>5</td>\n",
        "      <td>6</td>\n",
        "      <td>0</td>\n",
-       "      <td>9</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>7</td>\n",
-       "      <td>116</td>\n",
+       "      <td>82</td>\n",
        "      <td>3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>4</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
        "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>8</td>\n",
-       "      <td>97</td>\n",
+       "      <td>66</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
        "      <td>2</td>\n",
-       "      <td>7</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
+       "      <td>5</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>9</td>\n",
-       "      <td>90</td>\n",
+       "      <td>65</td>\n",
        "      <td>0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>10</td>\n",
-       "      <td>44</td>\n",
+       "      <td>29</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -249,30 +252,30 @@
       ],
       "text/plain": [
        "    GW Points  Total  ARS (A)  ARS (H)  AVL (A)  AVL (H)  BHA (A)  BHA (H)  \\\n",
-       "10          6    252        2        6        8        8        6        2   \n",
-       "11          7    116        3        3        1        4        2        0   \n",
-       "12          8     97        2        2        2        3        1        1   \n",
-       "13          9     90        0        4        2        2        2        3   \n",
-       "14         10     44        1        0        1        0        1        0   \n",
+       "10          6    164        2        5        2        7        2        1   \n",
+       "11          7     82        3        2        1        4        1        0   \n",
+       "12          8     66        1        2        1        3        0        0   \n",
+       "13          9     65        0        3        2        2        2        3   \n",
+       "14         10     29        1        0        0        0        1        0   \n",
        "\n",
        "    BOU (A)  BOU (H)  ...  NFO (A)  NFO (H)  SOU (A)  SOU (H)  TOT (A)  \\\n",
-       "10        1        9  ...        4       10       10       15        1   \n",
-       "11        3        4  ...        1        2        4        5        1   \n",
-       "12        0        2  ...        2        3        3        4        2   \n",
-       "13        1        2  ...        1        1        4        3        4   \n",
-       "14        2        1  ...        1        2        2        2        0   \n",
+       "10        0        3  ...        3        9        4       13        0   \n",
+       "11        2        3  ...        1        2        3        4        0   \n",
+       "12        0        1  ...        1        3        2        3        1   \n",
+       "13        1        0  ...        1        1        2        2        3   \n",
+       "14        1        1  ...        1        1        1        2        0   \n",
        "\n",
        "    TOT (H)  WHU (A)  WHU (H)  WOL (A)  WOL (H)  \n",
-       "10        6        8        6        0        9  \n",
-       "11        2        3        2        5        7  \n",
-       "12        7        3        1        2        2  \n",
-       "13        1        0        4        1        4  \n",
-       "14        0        3        2        3        3  \n",
+       "10        6        5        6        0        3  \n",
+       "11        2        0        1        4        7  \n",
+       "12        5        2        1        1        1  \n",
+       "13        0        0        3        1        2  \n",
+       "14        0        1        2        2        2  \n",
        "\n",
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
